<project>
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.github.linguaphylo</groupId>
        <artifactId>lphybeast-root</artifactId>
        <version>2.0.0-SNAPSHOT</version>
    </parent>
    <name>lphybeast-ssm</name>
    <artifactId>lphybeast-ssm</artifactId>

    <dependencies>
        <dependency>
            <groupId>io.github.linguaphylo</groupId>
            <artifactId>lphybeast</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>substmodels</groupId>
            <artifactId>substmodels</artifactId>
            <version>1.0.0-SNAPSHOT</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>25</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <goals><goal>properties</goal></goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <systemPropertyVariables>
                        <BEAST_PACKAGE_PATH>${io.github.compevol:beast-base:jar}</BEAST_PACKAGE_PATH>
                    </systemPropertyVariables>
                    <argLine>
                        --add-reads lphy.beast.ssm=ALL-UNNAMED
                        --add-reads lphy.beast=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
